# python-project-template

./: .gitignore  README.md  build_project.py  pyproject.toml
LICENSES/: Beerware.txt  MIT.txt
docs/: changelog.md  index.md  reference.md  usage.md
src/{{project-template}}/: __init__.py
tests/: __init__.py
